# wingz

./: .gitignore  README.md  example_usage.py  formation_span_model.py  pyproject.toml
docs/: future_ideas.md
docs/formation_flight/: README.md  business_case.md  cost_analysis.md  design_exploration.md  elevator_pitch.md  hybrid_ops.md  operational_concepts.md  payload_swap.md  references.md  results.md  structural_optimization.md
docs/superpowers/plans/: 2026-05-29-formation-flight-modeling.md
scripts/: climb_profile.py  converged_sweep.py  cost_comparison.py  design_search.py  energy_timeline.py  explore_aircraft.py  formation_drag_analysis.py  formation_scaling.py  generate_results.py  run_all.sh  sensitivity_analysis.py  span_chord_sweep.py  sweep_single_vs_formation.py
tests/: test_atmosphere.py  test_control.py  test_cost.py  test_drag.py  test_energy_balance.py  test_formation_aero.py  test_mission.py  test_pareto.py  test_payload.py  test_plots.py  test_solar.py  test_station_keeping.py  test_structures.py  test_sweep.py
wingz/: constants.py
wingz/aerodynamics/: drag.py  formation_aero.py
wingz/aircraft/: aero.py  geometry.py  optimizer.py  renderer.py  structures.py
wingz/control/: architectures.py  station_keeping.py
wingz/cost/: mass_proxy.py  materials.py
wingz/evaluation/: pareto.py  solver.py  sweep.py
wingz/mission/: atmosphere.py  payload.py  profiles.py
wingz/solar/: energy_balance.py  power.py
wingz/structures/: beam.py  empirical.py  tube_optimizer.py  wing_renderer.py
wingz/visualization/: plots.py
(+1 files in other folders)
