[project]
name = "wingz"
version = "0.1.0"
description = "Formation flight vs single aircraft modeling for solar HALE platforms"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["wingz*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
